[VEUE-572]: Fix misalignment of broadcaster login

--- a/app/javascript/style/broadcast/_layout.scss
+++ b/app/javascript/style/broadcast/_layout.scss
@@ -18,6 +18,7 @@ textarea {
 
 #main-container {
   display: flex;
+  justify-content: center;
   height: calc(100vh - 40px);
   padding: 20px;
 }
